# curedcolumns

./: CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
src/curedcolumns/: __main__.py  get_column_names.py  get_parquet_column_names.py  iter_files.py  list_parquet_files.py  list_tables.py
src/lsfields/: __main__.py  list_parquet_files.py
src/metadata_generator/: __main__.py
tests/: conftest.py  test_get_s3_parquet_schema.py  test_iter_files.py
