[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curedcolumns"
dynamic = ["version"]
dependencies = [
  "boto3==1.*",
  "pyarrow==16.*"
]

[tool.setuptools.dynamic]
version = {attr = "curedcolumns.__version__"}

# Executable scripts
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#creating-executable-scripts
[project.scripts]
curedcolumns = "curedcolumns.__main__:main"
